--- a/index.html
+++ b/index.html
@@ -273,47 +273,18 @@
   </div>
 
   <div class="bottom-container">
-    <div class="container">
-      <div class="row">
-        <div class="col-sm-2 col-12">
-          <h5>Links</h5>
-        </div>
-        <div class="col-sm-4 col-12">
-          <h5>Contact Us</h5>
-          <ul class="list-unstyled">
-            <li>
-              <p>
-                <a class="btn btn-social-icon" href="mailto:arnab@gmail.com?subject=This%20is%20the%20subject&cc=someone_else@example.com&body=This%20is%20the%20body">
-                  <i class="fa fa-envelope-o"></i></a> contact.learnyuva@gmail.com
-              </p>
-            </li>
-            <li>
-              <p>
-                <a class="btn btn-social-icon" href="#">
-                  <i class="fas fa-mobile-alt"></i>
-                </a> +91-6969696969
-              </p>
-            </li>
-          </ul>
-        </div>
-        <div class="col-sm-6 col-12">
-          <h5>Our Social Media Handles</h5>
-          <div class="social">
-            <a class="footer-link" href="https://www.facebook.com/learnyuva/"><i class=" fa-fw fab fa-facebook fa-lg"></i></a>
-            <a class="footer-link" href="https://www.linkedin.com/"><i class="fa-fw fab fa-linkedin-in fa-lg"></i></a>
-            <a class="footer-link" href="https://www.instagram.com/learnyuva/"><i class="fa-fw fab fa-instagram fa-lg"></i></a>
-          </div>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-12 text-center">
-          <h5 class="text-center">© 2020 LearnYuva All rights reserved.</h5>
-          <h6 class="Love">Made with &#x2764;</h6>
-        </div>
-      </div>
+    <div class="social text-center">
+      <a class="footer-link" href="https://www.facebook.com/"><i class="fa-fw fab fa-facebook fa-lg"></i></a>
+      <a class="footer-link" href="https://www.instagram.com/"><i class="fa-fw fab fa-instagram fa-lg"></i></a>
+      <a class="footer-link" href="https://www.linkedin.com/"><i class="fa-fw fab fa-linkedin-in fa-lg"></i></a>
+      <a class="footer-link" href="mailto:contact.learnyuva@gmail.com"><i class="fa-fw fas fa-envelope fa-lg"></i></a>
+        <a class="footer-link" href=""><i class="fa-fw fas fa-comment-alt fa-lg"></i></a>
     </div>
-  </div>
 
+    <h5 class="text-center">© 2020 LearnYuva All rights reserved.</h5>
+    <h6 class="text-center"> Made with &#x2764;</h6>
+  </div>
+  
   <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
