--- a/index.html
+++ b/index.html
@@ -208,7 +208,37 @@
       <h1 class="text-center">What makes us Different?</h1>
       <hr class="my-4">
     </div>
-
+  <div class="row">
+      <div class="column">
+        <div class="card">
+          <img src="Assets/Images/elearning.png" alt="Avatar" style="width:100%">
+          <br>
+          <p>10 hrs+ of live interactive & doubt solving sessions.</p>
+        </div>
+      </div>
+  <div class="column">
+    <div class="card">
+      <img src="Assets/Images/desktop-computer.png" alt="Avatar" style="width:100%">
+      <br>
+      <p>Get mentored by top professionals.</p>
+    </div>
+  </div>
+  <div class="column">
+    <div class="card">
+      <img src="Assets/Images/graduate.png" alt="Avatar" style="width:100%">
+      <br>
+      <p>Courses tailored for your all-round development.</p>
+    </div>
+  </div>
+  <div class="column">
+    <div class="card"><img src="Assets/Images/video-tutorials.png" alt="Avatar" style="width:100%">
+      <br>
+    <p>Personalized guidance suited to your needs.</p>
+  </div>
+  </div>
+</div>
+<br>
+<br>
 
     
 
