--- a/index.html
+++ b/index.html
@@ -313,15 +313,15 @@
 
   <div class="bottom-container">
     <div class="social text-center">
-       <a class="footer-link" href="https://www.facebook.com/"><i class="fa-fw fab fa-facebook fa-lg"></i></a>
-      <a class="footer-link" href="https://www.instagram.com/"><i class="fab fa-instagram fa-lg"></i></a>
-      <a class="footer-link" href="https://www.linkedin.com/"><i class="fab fa-linkedin-in fa-lg"></i></a>
+      <a class="footer-link" href="https://www.facebook.com/"><i class="fa-fw fab fa-facebook fa-lg"></i></a>
+      <a class="footer-link" href="https://www.instagram.com/"><i class="fa-fw fab fa-instagram fa-lg"></i></a>
+      <a class="footer-link" href="https://www.linkedin.com/"><i class="fa-fw fab fa-linkedin-in fa-lg"></i></a>
       <a class="footer-link" href="mailto:contact.learnyuva@gmail.com"><i class="fa-fw fas fa-envelope fa-lg"></i></a>
-      <a class="footer-link" href="https://www.google.com/"><i class="fa-fw fas fa-comment-alt fa-lg"></i></a>
+      <a class="footer-link" href=""><i class="fa-fw fas fa-comment-alt fa-lg"></i></a>
     </div>
 
     <h5 class="text-center">© 2020 LearnYuva All rights reserved.</h5>
-    <h6 class="text-center">Made with &#2764;</h6>
+    <h6 class="text-center"> Made with &#x2764;</h6>
   </div>
   
   <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
