--- a/index.html
+++ b/index.html
@@ -214,27 +214,27 @@
     <div class="row">
       <div class="column">
         <div class="card">
-          <img src="Assets/Images/elearning.png" alt="Avatar" style="width:100%">
+          <img src="Assets/Images/elearning.png" alt="live sessions" style="width:100%">
           <br>
           <p>10 hrs+ of live interactive & doubt solving sessions.</p>
         </div>
       </div>
   <div class="column">
     <div class="card">
-      <img src="Assets/Images/desktop-computer.png" alt="Avatar" style="width:100%">
+      <img src="Assets/Images/desktop-computer.png" alt="pro. mentor" style="width:100%">
       <br>
       <p>Get mentored by top professionals.</p>
     </div>
   </div>
   <div class="column">
     <div class="card">
-      <img src="Assets/Images/graduate.png" alt="Avatar" style="width:100%">
+      <img src="Assets/Images/graduate.png" alt="full development" style="width:100%">
       <br>
       <p>Courses tailored for your all-round development.</p>
     </div>
   </div>
   <div class="column">
-    <div class="card"><img src="Assets/Images/video-tutorials.png" alt="Avatar" style="width:100%">
+    <div class="card"><img src="Assets/Images/video-tutorials.png" alt="suitable guidance" style="width:100%">
       <br>
     <p>Personalized guidance suited to your needs.</p>
   </div>
