--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
           <a class="nav-item nav-link nav-pills dropdown-toggle" href="#">Browse our courses</a>
           <div class="menu">
             <div class="item">
-              Foreign Languages
+              Languages
               <div class="menu">
                 <a class="courses item" href="courses/french.html">French</a>
                 <a class="courses item" href="courses/spanish.html">Spanish</a>
@@ -54,9 +54,9 @@
               </div>
             </div>
             <div class="item">
-              Internet of Robotic Things
+              IOT with Robotics
               <div class="menu">
-                <a class="courses item" href="courses/iot.html">Internet of Things [IoT]</a>
+                <a class="courses item" href="courses/iot.html">Internet of Things</a>
                 <a class="courses item" href="courses/robotics.html">Robotics</a>
                 <a class="courses item" href="courses/drone.html">Drone Making</a>
               </div>
@@ -221,6 +221,16 @@
             </p>
         </div>
       </div>
+
+      <!-- USP -->
+      <div class="row justify-content-center">
+        <div class="col-sm-3 col-12">
+          <div class="card">
+
+          </div>
+        </div>
+      </div>
+      <!-- USP End-->
       <hr class="divider">
       <div class="row">
         <div class="col-sm-4 col-12 order-sm-last my-auto">
