--- a/courses/java.html
+++ b/courses/java.html
@@ -54,9 +54,9 @@
               </div>
             </div>
             <div class="item">
-              Internet of Robotic Things
+              IOT with Robotics
               <div class="menu">
-                <a class="courses item" href="iot.html">Internet of Things [IoT]</a>
+                <a class="courses item" href="iot.html">Internet of Things</a>
                 <a class="courses item" href="robotics.html">Robotics</a>
                 <a class="courses item" href="drone.html">Drone Making</a>
               </div>
