--- a/courses/robotics.html
+++ b/courses/robotics.html
@@ -110,10 +110,10 @@
               <div class=" ">
                 <form id="loginDetails">
                   <div class="form-group">
-                    <input type="text" class="form-control" id="username" placeholder="Enter your Username">
+                    <input type="email" class="form-control" id="userMail" placeholder="Enter your Username">
                   </div>
                   <div class="form-group">
-                    <input type="password" class="form-control" id="password" placeholder = "Enter your password">
+                    <input type="password" class="form-control" id="userPassword" placeholder="Enter your password">
                   </div>
                   <div class="form-group">
                     <a href=""><button class="btn btn-outline-dark">Login</button></a>
