--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
     <div class="row">
       <div class="column">
         <div class="card">
-          <img src="Assets/Images/elearning.png" class="course-icon mx-auto" alt="live sessions">
+          <img src="Assets/Images/instructor.png" class="course-icon mx-auto" alt="live sessions">
           <br>
           <p>10 hrs+ of live interactive & doubt solving sessions.</p>
         </div>
