--- a/courses/app.html
+++ b/courses/app.html
@@ -212,45 +212,23 @@
         </div>
     </div>
   </div>
-  
-
   <div class="bottom-container">
-    <div class="container">
+    <div class="container my-auto">
       <div class="row">
-        <div class="col-sm-2 col-12">
-          <h5>Links</h5>
-        </div>
-        <div class="col-sm-4 col-12">
-          <h5>Contact Us</h5>
-          <ul class="list-unstyled">
-            <li>
-              <p>
-                <a class="btn btn-social-icon" href="mailto:arnab@gmail.com?subject=This%20is%20the%20subject&cc=someone_else@example.com&body=This%20is%20the%20body">
-                  <i class="fa fa-envelope-o"></i></a> contact.learnyuva@gmail.com
-              </p>
-            </li>
-            <li>
-              <p>
-                <a class="btn btn-social-icon" href="#">
-                  <i class="fas fa-mobile-alt"></i>
-                </a> +91-6969696969
-              </p>
-            </li>
-          </ul>
-        </div>
-        <div class="col-sm-6 col-12">
-          <h5>Our Social Media Handles</h5>
-          <div class="social">
-            <a class="footer-link" href="https://www.facebook.com/learnyuva/"><i class=" fa-fw fab fa-facebook fa-lg"></i></a>
+        <div class="col-12 my-auto">
+          <div class="social text-center">
+            <a class="footer-link" href="https://www.facebook.com/learnyuva"><i class="fa-fw fab fa-facebook fa-lg"></i></a>
+            <a class="footer-link" href="https://www.instagram.com/learnyuva"><i class="fa-fw fab fa-instagram fa-lg"></i></a>
             <a class="footer-link" href="https://www.linkedin.com/"><i class="fa-fw fab fa-linkedin-in fa-lg"></i></a>
-            <a class="footer-link" href="https://www.instagram.com/learnyuva/"><i class="fa-fw fab fa-instagram fa-lg"></i></a>
+            <a class="footer-link" href="mailto:contact.learnyuva@gmail.com"><i class="fa-fw fas fa-envelope fa-lg"></i></a>
+            <a class="footer-link" href=""><i class="fa-fw fas fa-comment-alt fa-lg"></i></a>
           </div>
         </div>
-      </div>
-      <div class="row">
-        <div class="col-12 text-center">
-          <h5 class="text-center">© 2020 LearnYuva All rights reserved.</h5>
-          <h6 class="Love">Made with &#x2764;</h6>
+        <div class="col-12">
+          <div class="my-auto">
+            <h6 class="text-center">© 2020 LearnYuva All rights reserved.</h6>
+            <h6 class="text-center"> Made with &#x2764;</h6>
+          </div>
         </div>
       </div>
     </div>
