--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
         <div class="col-sm-8 col-12 order-sm-first my-auto">
           <h3>Languages</h3>
           <p class="text-left">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque esse modi molestiae recusandae, nam dolores nisi sequi beatae. Eligendi provident officia nulla quo voluptate eveniet incidunt in quaerat ipsa non.
+          Eliminate the concern of communication barrier in any foreign country by learning to speak various languages with ease.
           </p>
         </div>
       </div>
@@ -275,7 +275,7 @@
         <div class="col-sm-8 col-12 order-sm-first my-auto course-text">
           <h3>Development</h3>
           <p class="text-left">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque esse modi molestiae recusandae, nam dolores nisi sequi beatae. Eligendi provident officia nulla quo voluptate eveniet incidunt in quaerat ipsa non.
+              Take a step towards advancement by acquiring the skills of Web Development, App Development, Game Development & iOS Development.
           </p>
         </div>
       </div>
@@ -287,7 +287,7 @@
         <div class="col-sm-8 col-12 order-sm-first my-auto">
           <h3>Internet of Robotic Things</h3>
           <p class="text-left">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque esse modi molestiae recusandae, nam dolores nisi sequi beatae. Eligendi provident officia nulla quo voluptate eveniet incidunt in quaerat ipsa non.
+             Familiarize yourself with concept of Internet of Things, Robotics, Drone Making etc. which will help you embark on your journey towards triumph.
           </p>
         </div>
       </div>
@@ -299,7 +299,7 @@
         <div class="col-sm-8 col-12 order-sm-first my-auto course-text">
           <h3>Marketing</h3>
           <p class="text-left">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque esse modi molestiae recusandae, nam dolores nisi sequi beatae. Eligendi provident officia nulla quo voluptate eveniet incidunt in quaerat ipsa non.
+         Understanding the marketing strategies & a spectrum of tactics that fall under umbrella of Digital Marketing.
           </p>
         </div>
       </div>
@@ -311,7 +311,7 @@
         <div class="col-sm-8 col-12 order-sm-first my-auto">
           <h3>Coding</h3>
           <p class="text-left">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque esse modi molestiae recusandae, nam dolores nisi sequi beatae. Eligendi provident officia nulla quo voluptate eveniet incidunt in quaerat ipsa non.
+           Learn the language of computers & dive deep into the world of coding with us.
           </p>
         </div>
       </div>
