--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
         </div>
         <div class="col-sm-7 col-12">
           <p>
-            Been looking for quality content that can make you smart enough to confidently present yourself before the contemporary world? You are at the right destination. Keep your eyes peeled and make the most out of this opportunity that has
+            Been looking for live & quality courses that can make you smart enough to confidently present yourself before the contemporary world? You are at the right destination. Keep your eyes peeled and make the most out of this opportunity that has
             knocked your door!
           </p>
         </div>
