--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <a class="nav-item nav-link nav-pills active" href="#">Home</a>
 
         <div class="ui dropdown">
-          <a class="nav-item nav-link nav-pills dropdown-toggle" href="#">Browse our courses</a>
+          <a class="nav-item nav-link nav-pills dropdown-toggle" href="#">Courses</a>
           <div class="menu">
             <div class="item">
               Languages
