--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
         <div class="card">
           <img src="Assets/Images/instructor.png" class="course-icon mx-auto" alt="live sessions">
           <br>
-          <p>10 hrs+ of live interactive & doubt solving sessions.</p>
+          <p>10 hrs+ of live & doubt solving sessions.</p>
         </div>
       </div>
       <hr class="divider d-block d-sm-none">
