--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
         <div class="card">
           <img src="Assets/Images/desktop-computer.png" class="course-icon mx-auto" alt="pro. mentor">
           <br>
-          <p>Get mentored by top professionals of their fields.</p>
+          <p>Get mentored by top experts of their fields.</p>
         </div>
       </div>
       <hr class="divider d-block d-sm-none">
