Changes made in Course Contents

--- a/courses/app.html
+++ b/courses/app.html
@@ -32,25 +32,29 @@
     <div class="collapse navbar-collapse justify-content-end" id="newsMenu">
       <div class="navbar-nav">
         <a class="nav-item nav-link nav-pills" href="../index.html">Home</a>
+        
         <div class="ui dropdown">
-          <a class="nav-item nav-link nav-pills dropdown-toggle" href="#">Browse our courses</a>
+          <a class="nav-item nav-link nav-pills dropdown-toggle" href="#">Courses</a>
           <div class="menu">
             <div class="item">
-              Foreign Languages
+              Languages
               <div class="menu">
-                <div class="item"><a class="courses" href="french.html">French</a></div>
+                <a class="courses item" href="french.html">French</a>
                 <a class="courses item" href="spanish.html">Spanish</a>
                 <a class="courses item" href="german.html">German</a>
               </div>
             </div>
-           
+
             <div class="item">
-              Development
+              Technical
               <div class="menu">
                 <a class="courses item" href="web.html">Web Development</a>
-                <div class="item"><a class="courses" href="#">App Development</a></div>
+                <a class="courses item" href="app.html">App Development</a>
                 <a class="courses item" href="ios.html">iOS Development</a>
-                <a class="courses item" href="game.html">Game Development</a>
+                <a class="courses item" href="c.html">C</a>
+                <a class="item courses" href="c++.html">C++</a>
+                <a class="item courses" href="java.html">Java</a>
+                <a class="courses item" href="python.html">Python</a>
               </div>
             </div>
             <div class="item">
@@ -67,20 +71,12 @@
                 <a class="courses item" href="dm.html">Digital Marketing</a>
               </div>
             </div>
-            <div class="item">
-              Coding
-              <div class="menu">
-                <a class="item courses" href="c++.html">C++</a>
-                <a class="item courses" href="java.html">Java</a>
-                <a class="courses item" href="python.html">Python</a>
-              </div>
             </div>
           </div>
-        </div>
 
         <div class="dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            Join Us
+            Learn Live
           </a>
           <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
           <a class="dropdown-item" href="#" id="login">Login</a>
