--- a/index.html
+++ b/index.html
@@ -45,12 +45,15 @@
             </div>
 
             <div class="item">
-              Development
+              Technical
               <div class="menu">
                 <a class="courses item" href="courses/web.html">Web Development</a>
                 <a class="courses item" href="courses/app.html">App Development</a>
                 <a class="courses item" href="courses/ios.html">iOS Development</a>
-                <a class="courses item" href="courses/game.html">Game Development</a>
+                <a class="courses item" href="courses/c.html">C</a>
+                <a class="item courses" href="courses/c++.html">C++</a>
+                <a class="item courses" href="courses/java.html">Java</a>
+                <a class="courses item" href="courses/python.html">Python</a>
               </div>
             </div>
             <div class="item">
@@ -67,21 +70,13 @@
                 <a class="courses item" href="courses/dm.html">Digital Marketing</a>
               </div>
             </div>
-            <div class="item">
-              Coding
-              <div class="menu">
-                <a class="item courses" href="courses/c++.html">C++</a>
-                <a class="item courses" href="courses/java.html">Java</a>
-                <a class="courses item" href="courses/python.html">Python</a>
-              </div>
             </div>
           </div>
-        </div>
 
 
         <div class="dropdown">
           <a class="nav-link nav-item dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            Join Us
+            Learn Live
           </a>
           <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
             <a class="dropdown-item" href="#" id="login">Login</a>
@@ -273,9 +268,9 @@
           <img class="course-icon" src="Assets/Images/devIcon.svg" alt="development-img">
         </div>
         <div class="col-sm-8 col-12 order-sm-first my-auto course-text">
-          <h3>Development</h3>
+          <h3>Technical</h3>
           <p class="text-left">
-              Take a step towards advancement by acquiring the skills of Web Development, App Development, Game Development & iOS Development.
+              Take a step towards advancement by acquiring the skills of Web Development, App Development & iOS Development. Learn Different in Industry demand languages.
           </p>
         </div>
       </div>
@@ -284,8 +279,8 @@
         <div class="col-sm-4 col-12 order-sm-first my-auto">
           <img class="course-icon" src="Assets/Images/iotIcon.svg" alt="electronics-img">
         </div>
-        <div class="col-sm-8 col-12 order-sm-first my-auto">
-          <h3>Internet of Robotic Things</h3>
+        <div class="col-sm-8 col-12 order-sm-first my-auto" style="padding: 15px;">
+          <h3>IOT with Robotics</h3>
           <p class="text-left">
              Familiarize yourself with concept of Internet of Things, Robotics, Drone Making etc. which will help you embark on your journey towards triumph.
           </p>
@@ -296,22 +291,10 @@
         <div class="col-sm-4 col-12 order-sm-last my-auto">
           <img class="course-icon" src="Assets/Images/marketingIcon.png" alt="development-img">
         </div>
-        <div class="col-sm-8 col-12 order-sm-first my-auto course-text">
+        <div class="col-sm-8 col-12 order-sm-first my-auto course-text"  style="padding-left: 15px;">
           <h3>Marketing</h3>
           <p class="text-left">
          Understanding the marketing strategies & a spectrum of tactics that fall under umbrella of Digital Marketing.
-          </p>
-        </div>
-      </div>
-      <hr class="divider">
-      <div class="row">
-        <div class="col-sm-4 col-12 order-sm-first my-auto">
-          <img class="course-icon" src="Assets/Images/codingIcon.png" alt="electronics-img">
-        </div>
-        <div class="col-sm-8 col-12 order-sm-first my-auto">
-          <h3>Coding</h3>
-          <p class="text-left">
-           Learn the language of computers & dive deep into the world of coding with us.
           </p>
         </div>
       </div>
