Added LearnLive button

--- a/courses/app.html
+++ b/courses/app.html
@@ -74,15 +74,26 @@
             </div>
           </div>
 
-        <div class="dropdown">
-          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            Learn Live
-          </a>
-          <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-          <a class="dropdown-item" href="#" id="login">Login</a>
-          <a class="dropdown-item" href="#" id="signup">Sign Up</a>
+          <div class="ui dropdown">
+            <a class="nav-item nav-link nav-pills dropdown-toggle" href="#">LearnLive</a>
+            <div class="menu">
+              <div class="item">
+                LogIn
+                <div class="menu">
+                  <a class="courses item" href="#" id="stuLogin">Student Login</a>
+                  <a class="courses item" href="#" id="insLogin">Instructor Login</a>
+                  <a class="courses item" href="#" id="adminLogin">Admin Login</a>
+                </div>
+              </div>
+              <div class="item">
+                SignUp
+                <div class="menu">
+                  <a class="courses item" href="#" id="stuLogin">Student SignUp</a>
+                  <a class="courses item" href="#" id="insLogin">Instructor SignUp</a>
+                </div>
+              </div>
+            </div>
           </div>
-        </div>
         <a class="nav-item nav-link nav-pills" href="#">Contact</a>
         <a class="nav-item nav-link nav-pills" href="#">About</a>
       </div>
