--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
         </div>
         <div class="col-sm-7 col-12">
           <p>
-            Been looking for live & quality courses that can make you smart enough to confidently present yourself before the contemporary world? You are at the right destination. Keep your eyes peeled & make the most out of this opportunity that has
+            Been looking for live and quality courses that can make you smart enough to confidently present yourself before the contemporary world? You are at the right destination. Keep your eyes peeled and make the most out of this opportunity that has
             knocked your door!
           </p>
         </div>
@@ -280,7 +280,7 @@
         <div class="col-sm-8 col-12 order-sm-first my-auto course-text">
           <h3>Technical</h3>
           <p class="text-left">
-              Take a step towards advancement by acquiring the skills of Web Development, App Development & iOS Development. Learn Different in Industry demand languages.
+              Take a step towards advancement by acquiring the skills of Web Development, App Development and iOS Development and learn the languages of computers and be industry ready.
           </p>
         </div>
       </div>
@@ -304,7 +304,7 @@
         <div class="col-sm-8 col-12 order-sm-first my-auto course-text"  style="padding-left: 15px;">
           <h3>Marketing</h3>
           <p class="text-left">
-         Understanding the marketing strategies & a spectrum of tactics that fall under umbrella of Digital Marketing.
+         Understanding the marketing strategies and a spectrum of tactics that fall under umbrella of Digital Marketing.
           </p>
         </div>
       </div>
