--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
         <div class="card">
           <img src="Assets/Images/instructor.png" class="course-icon mx-auto" alt="live sessions">
           <br>
-          <p>10 hours of live & doubt solving sessions.</p>
+          <p>10 hours of live and doubt solving sessions.</p>
         </div>
       </div>
       <hr class="divider d-block d-sm-none">
@@ -280,7 +280,7 @@
         <div class="col-sm-8 col-12 order-sm-first my-auto course-text">
           <h3>Technical</h3>
           <p class="text-left">
-              Take a step towards advancement by acquiring the skills of Web Development, App Development and iOS Development and learn the languages of computers and be industry ready.
+              Take a step towards advancement by acquiring the skills of Web Development, App Development and iOS Development and learn the languages of computers to be industry ready.
           </p>
         </div>
       </div>
