--- a/courses/spanish.html
+++ b/courses/spanish.html
@@ -205,6 +205,7 @@
     </div>
 
     <hr class="my-4 divider">
+    <br>
     <div class="container">
         <div class="row">
             <div class="col-md-3 d-none d-md-block course-stats">
@@ -212,13 +213,22 @@
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam temporibus iste voluptatem quia voluptates? Ipsum culpa sit soluta neque sint facilis aperiam voluptates, ex quam voluptatum, quo mollitia error non.</p>
             </div>
             <div class="col-md-9 col-12 course-content">
-                <h5>Course Content Here</h5>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laboriosam corrupti, nesciunt voluptate ullam voluptatem repellat quod vitae saepe? Sunt ut facere optio nesciunt suscipit expedita labore! Eum autem natus exercitationem.</p>
+               <h5>There are 4 levels in this course</h5>
+                <br>
+                <h6>Level A1</h6>
+                <p>This level aims to teach everyone basics of Spanish language which includes vocabulary & basic Grammar. After clearing this level student will be able to Give & ask Personal Info, give directions and speak in simple past and simple present tense.</p>
+                <h6>Level A2</h6>
+                <p>This second level will introduce students with more complex vocabulary of Spanish language. After clearing this level student will be able to describe about objects and places, give advice, write about different types of texts, and talk about their feelings.</p>
+                <h6>Level B1</h6>
+                <p>This level will introduce students with core Grammar of Spanish language. After clearing this level student will be able to describe and discuss about past and present, give instructions, talk on the phone, send messages and talk about future actions.</p>
+                <h6>Level B2</h6>
+                <p>This fourth level will introduce subjunctive, future tense and passive sentences. This is the final level after which students will showcase their mastery on spanish language.</p> 
+                
             </div>
         </div>
     </div>
   </div>
-  
+  <br>
 
   <div class="bottom-container">
     <div class="container my-auto">
