--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
             <div class="item">
               Languages
               <div class="menu">
-                <a class="courses item" href="courses/french.html">French</a>
                 <a class="courses item" href="courses/spanish.html">Spanish</a>
+                <a class="courses item" href="courses/french.html">French</a>
                 <a class="courses item" href="courses/german.html">German</a>
               </div>
             </div>
@@ -93,7 +93,7 @@
               </div>
             </div>
           </div>
-        <a class="nav-item nav-link nav-pills" href="#">About Us</a>
+        <a class="nav-item nav-link nav-pills" href="aboutus.html">About Us</a>
         <a class="nav-item nav-link nav-pills" href="#">Contact Us</a>
       </div>
     </div>
