--- a/courses/app.html
+++ b/courses/app.html
@@ -39,8 +39,8 @@
             <div class="item">
               Languages
               <div class="menu">
-                <a class="courses item" href="french.html">French</a>
                 <a class="courses item" href="spanish.html">Spanish</a>
+                <a class="courses item" href="french.html">French</a>
                 <a class="courses item" href="german.html">German</a>
               </div>
             </div>
@@ -95,7 +95,7 @@
             </div>
           </div>
         <a class="nav-item nav-link nav-pills" href="#">Contact</a>
-        <a class="nav-item nav-link nav-pills" href="#">About</a>
+        <a class="nav-item nav-link nav-pills" href="../aboutus.html">About Us</a>
       </div>
     </div>
   </nav>
