--- a/courses/game.html
+++ b/courses/game.html
@@ -38,8 +38,8 @@
             <div class="item">
               Languages
               <div class="menu">
-                <a class="courses item" href="french.html">French</a>
                 <a class="courses item" href="spanish.html">Spanish</a>
+                <a class="courses item" href="french.html">French</a>
                 <a class="courses item" href="german.html">German</a>
               </div>
             </div>
@@ -93,8 +93,8 @@
               </div>
             </div>
           </div>
+        <a class="nav-item nav-link nav-pills" href="../aboutus.html">About Us</a>
         <a class="nav-item nav-link nav-pills" href="#">Contact</a>
-        <a class="nav-item nav-link nav-pills" href="#">About</a>
       </div>
     </div>
   </nav>
