--- a/courses/web.html
+++ b/courses/web.html
@@ -93,8 +93,8 @@
               </div>
             </div>
           </div>
+        <a class="nav-item nav-link nav-pills" href="../aboutus.html">About Us</a>
         <a class="nav-item nav-link nav-pills" href="#">Contact</a>
-        <a class="nav-item nav-link nav-pills" href="#">About</a>
       </div>
     </div>
   </nav>
