Updated design Team

--- a/aboutus.html
+++ b/aboutus.html
@@ -229,6 +229,8 @@
                             <p>
                                 <ul class="list-unstyled text-center">
                                     <li>Payel Paul</li>
+                                    <li>Tirth</li>
+                                    <li>Varun Vaibhav Jha</li>
                                 </ul>
                             </p>
                         </div>
@@ -262,7 +264,6 @@
                                     <li>Anurag Singh</li>
                                     <li>Arnab Deep</li>
                                     <li>Saqib Rehman</li>
-                                    <li>Varun Vaibhav Jha</li>
                                 </ul>
                             </p>
                         </div>
