Added countdown timer

--- a/aboutus.html
+++ b/aboutus.html
@@ -38,8 +38,8 @@
             <div class="item">
               Languages
               <div class="menu">
-                <a class="courses item" href="courses/french.html">French</a>
                 <a class="courses item" href="courses/spanish.html">Spanish</a>
+                <a class="courses item" href="courses/french.html">French</a>
                 <a class="courses item" href="courses/german.html">German</a>
               </div>
             </div>
@@ -218,7 +218,7 @@
                             <div>
                                 <h4>Simant Keshari</h4>
                                 <h6><p>Founder & CEO</p></h6>
-                                <a href="https://www.instagram.com/learnyuva"><i class="fa-fw fab fa-instagram fa-lg"></i></a>
+                                <a href="https://www.instagram.com/simant_keshari/"><i class="fa-fw fab fa-instagram fa-lg"></i></a>
                                 <a href="https://www.linkedin.com/"><i class="fa-fw fab fa-linkedin-in fa-lg"></i></a>
                             </div>
                         </div>
