--- a/aboutus.html
+++ b/aboutus.html
@@ -229,7 +229,7 @@
                             <p>
                                 <ul class="list-unstyled text-center">
                                     <li>Payel Paul</li>
-                                    <li>Tirth</li>
+                                    <li>Tirth Kalaria</li>
                                     <li>Varun Vaibhav Jha</li>
                                 </ul>
                             </p>
